--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -5,6 +5,16 @@ output:
     df_print: paged
 ---
 
+```{r setup}
+if (!require(ggplot2)) {
+  # Installs ggplot2 if it is missing
+  # The installation process may ask you to update other packages. 
+  # If asked, select the option to update All.
+  install.packages("ggplot2")
+  library(ggplot2)
+}
+```
+
 ## Introduction
 
 Data analyses for any scientific research in an iterative, multi-stage process.
@@ -80,88 +90,112 @@ evidence against the null hypothesis, $H_0$, which leads to the that the
 alternative hypothesis, $H_1$ is true._
 
 
-## A simple linear regression model
+## A simple regression model
 
-One way to conduct the hypothesis test for the given research question is the 
-t-test for a single regression coefficient in a linear regression model. For
-example, we can fit the following simple linear regression model.
+One way to conduct the hypothesis test for the given research question is 
+checking whether the 95% confidence interval for the coefficient for the term
+`is_female` includes 0 in a simple regression model that describes the 
+relationship between the explanatory variable `is_female` and the response 
+variable `is_approved`. In R, we can write the formula for defining the
+relationship as `is_approved ~ is_female`.
 
-$$IsApproved_i = \beta_0 + \beta_1 IsFemale_i + \varepsilon_i$$
-
-where $IsApproved_i$ is `is_approved` and $IsFemale_i$ is `is_female` for $i$th
-application in the dataset `hdma`. 
-
-In R, we can write the formula as 
-`is_approved ~ is_female`. To fit the linear regression model, we can pass the 
-formula and along with the dataset to the function `lm()` as below. Calling the
-`summary()` function on the fitted object provides a quick summary of the model.
-
-__Run__ the code below. This provides a summary of the fitted simple linear 
-regression model.
+__Run__ the code below. This defines and stores the formula in `simple_formula`.
 
 ```{r}
-fit <- lm(formula = is_approved ~ is_female, data = hdma)
-summary(fit)
+simple_formula <- "is_approved ~ is_female"
 ```
 
-The summary table provides the estimated coefficient of the term $IsFemale$, 
-which is 0.004919. Recall that in the given dataset, a unit increase in 
-$IsFemale$ indicates the applicant's sex being female, 1, vs. male, 0. Thus,
-the coefficient is the mean gain in $IsApproved$ for female applicants vs.
-male applicants. $IsApproved$ was also encoded using 0 and 1 with 1 indicating
-an approved application. One way to interpret the result is that female 
-applicants were approved for their mortgage applications with 0.4919% higher
-probability on average. However, this value does not indicate whether the
-difference is statistically significant.
+A linear regression model using ordinary least squares is not appropriate for
+modelling the relationship since `is_approved` is a binary variable and it is
+not reasonable to assume a normal distribution for the variable. Instead, we
+describe the relationship using logistic regression which assumes a binomial
+distribution for the response variable. 
 
-The table provides the two-sided p-value for $IsFemale$, 0.762. When this 
-value is smaller than the predefined significance level, we could conclude that 
-the coefficient for $IsFemale$ does not equal to 0 at the significance level.
-In this case, since it is larger than our significance level, 0.05, we conclude
-that the result is not statistically significant and do not reject the null
-hypothesis.
+_We won't go into details about how logistic regression works. In this tutorial,
+we will focus on testing whether a coefficient in a logistic regression model is
+zero or not using confidence intervals._
 
-> Using the the simple linear regression model, we do not find statistically
-significant evidence that an applicant's sex was relevant in the probability
-of approval for their mortgage application. We fail to reject the null 
-hypothesis that mortgage providers were as likely to approve female applicants
-as male applicants.
+In R, you can use the function `glm()` with the option `family = binomial` to
+fit a logistic regression model. The function fits a family of generalized
+linear regression models and `family = binomial` specifies the underlying
+assumption about the response variable's distribution. We can then extract the 
+appropriate quantities from the fitted model as needed.
 
-Alternatively, we can extract the 95% confidence interval for the coefficient
-estimate using `confint()`. The function by default outputs a table with 95% 
-confidence intervals for all coefficients and the intercept. We can extract 
-confidence interval for the $IsFemale$ term only by using the row name. 
+__Run__ each of the code chunks below to fit the logistic regression model, and
+to extract the coefficient estimate and confidence intervals for `is_female`.
 
-__Run__ the code below. The code displays both the table of confidence intervals 
-for all terms and the confidence interval extracted for the $IsFemale$ term.
+1. Fit the logistic regression model using `glm()`.  
++ `formula = siimple_formula` specifies the model formula
++ `data = hdma` specifies the dataset used to fit the model
 
 ```{r}
-ci <- confint(fit)
-ci # all confidence intervals
-ci[row.names(ci) == "is_female", ] # extracting the is_female coefficient ci
+fit <- glm(formula = simple_formula, data = hdma, family = binomial)
 ```
 
-_Recall that in R, you can select a subset of the rows in a table by passing
-the desired condition in the first index while leaving the second index empty,
-`<table>[<condition> , ]`._
+2. Extract the coefficient estimates from the fitted model using `coef()`. To 
+extract the coefficient for `is_female` only we can find the element with 
+matching name using `names()`.
 
-We can make the same conclusion that we can not reject the null hypothesis based
-on the fact that the confidence interval, (-0.027, 0.037), includes 0.
+```{r}
+ests <- coef(fit)
+ests # note the named vector.
+est_is_female <- ests[names(ests) == "is_female"]
+est_is_female
+```
+
+The estimate represents the log-odd ratio for mortgage approval between female
+and male applicants. Exponentiating the value retrieves the odd ratio.
+
+```{r}
+exp(est_is_female)
+```
+
+An odd of an event is defined as the probability of the event over the
+probability of the complement. In our problem, the odd of a mortgage approval
+is the probability of a mortgage being approved over the probability of the
+mortgage being rejected. The ratio estimated by `exp(est_is_female)` is the
+ratio of the odd for female applicants over the odd for male applicants. 
+
+3. Extract the confidence intervals from the fitted model using `confint()`. The
+function outputs a matrix of, by default, 95%, confidence intervals for all
+terms. We can extract the interval for `is_female` only by matching the row name
+using `rownames()`.
+
+```{r}
+cis <- confint(fit)
+cis # note the matrix with named rows and columns
+ci_is_female <- cis[rownames(cis) == "is_female", ]
+ci_is_female
+```
+
+_Aside: There is more than one way to compute confidence intervals for models
+fitted with `glm()`. `confint()` returns a type of confidence intervals called
+profile confidence intervals._
+
+By printing `ci_is_female`, we can see that the 95% confidence interval for the
+`is_female` coefficient contains 0. Based on this result, we fail to reject the
+null hypothesis. 
+
+> Using the the logistic regression model with only a single explanatory
+variable, we do not find statistically significant evidence that an applicant's
+sex was relevant in the probability of approval for their mortgage application.
+
 
 ### _Practice_
 
 Mortgage providers consider the applicant's financial information when assessing
-an application. One may argue that the analysis above doesn't consider this and
-that the following model is a better model to answer the research question.
+an application. One may argue that the analysis above doesn't consider any
+financial information and that `payment_income_ratio` must be included as an
+explanatory variable in addition to `is_female`, or a covariate, to answer the
+research question.
 
-$$IsApproved_i = \beta_0 + \beta_1 IsFemale_i + \beta_2 PaymentIncomeRatio_i + \varepsilon_i$$
+In the code chunk provided below, fit the multiple logistic regression model
+with `is_approved` as the response variable and `is_female` and
+`payment_income_ratio` as the explanatory variables. From the fitted model,
+extract the 95% confidence interval for the `is_female` variable.
 
-where $IsApproved_i$ is `is_approved`, $IsFemale_i$ is `is_female`, and 
-$PaymentIncomeRatio_i$ is `payment_income_ratio` for $i$th application in the 
-dataset `hdma`. 
-
-In the code chunk provided below, fit the multiple linear regression defined
-above and extract the 95% confidence interval for the $IsFemale$ term.
+_Hint: To specify multiple explanatory variables in a model formula, you can 
+"add" the variable on the righ-hand side. e.g., `y ~ x + w + z`_
 
 ```{r}
 # write your code here
@@ -239,7 +273,7 @@ _Note that all 4 models include `is_approved` as the response variable and
 `is_female` as an explanatory variable since we are interested in the 
 relationship between the two._
 
-You can check that `formualae` indeed stores 4 items using `length()`. Storing
+You can check that `formulae` indeed stores 4 items using `length()`. Storing
 the value to a variable is also useful in the following steps.
 
 ```{r}
@@ -265,7 +299,7 @@ lapply(formulae, function(x) nchar(x))
 
 For each of the model in the multiverse, we will
 
-1. fit the linear regression model using the dataset `hdma`,  
+1. fit the logistic regression model using the dataset `hdma`,  
 2. extract the coefficient estimate and 95% confidence interval for `is_female`, 
 and
 3. store the extracted estimate and confidence interval.
@@ -276,7 +310,7 @@ of the coefficient estimates followed by the 95% confidence intervals for
 
 ```{r}
 results_list <- lapply(formulae, function(x) {
-  fit <- lm(x, data = hdma)
+  fit <- glm(x, data = hdma, family = binomial)
   # coefficients() extracts the coefficient estimates 
   ests <- coefficients(fit)
   cis <- confint(fit)
@@ -288,10 +322,6 @@ results_list <- lapply(formulae, function(x) {
 })
 results_list
 ```
-
-_Note that because `ests` is a 1-dimensional vector, you need to filter using a
-1-dimensional index, `[]`. Also, the vector only works with `names()` not 
-`row.names()`._
 
 
 ### Exploring the multiverse
@@ -309,7 +339,7 @@ __Run__ each of the code chunks below.
 1. Combine the vectors in `results_list` into a single table.
 
 ```{r}
-# do.call(ribnd, a_list) combines items in a_list row wise.
+# do.call(ribnd, a_list) combines items in a_list by row.
 results <- do.call(rbind, results_list)
 results
 ```
@@ -344,6 +374,12 @@ object in intermediate steps by calling `p`.
 
 ```{r}
 library(ggplot2)
+```
+
+If the library is not available, run the following code to install the library.
+
+```{r eval=FALSE}
+install.packages("ggplot2")
 ```
 
 2. Define a canvas using the data. We will place `Model` along the y-axis. 
@@ -414,14 +450,16 @@ model resulted in higher coefficient estimates for `is_female`. To highlight the
 comparison between models with and without `is_married`, we can explicitly group
 the values by whether the model includes `is_married`.
 
-__Run__ the code below. Recall that `ie_table` specifies which covariates are
-included in each model. `facet_grid()` can create facets or subplots grouped by 
-specified variable in rows (or columns). We set `scales = "free_y"` to remove 
-unnecessary y axis labels.
+__Run__ the code below. `grepl(x, y)` returns a vector consisting of `TRUE` if 
+the character `x` is detected in each value of vector `y` and `FALSE` otherwise.
+`facet_grid()` can create facets or subplots grouped by specified variable in
+rows (or columns). We set `scales = "free_y"` to remove unnecessary y axis 
+labels.
 
 ```{r}
-multiverse_table['has_is_married'] <- ifelse(ie_table$is_married, 
-                                             "Includes is_married", "")
+multiverse_table['has_is_married'] <- ifelse(
+  grepl("is_married", multiverse_table$Model), 
+  "Includes is_married", "")
 
 ggplot(multiverse_table, aes(y = Model)) +
   geom_point(aes(x = Estimate)) +
@@ -437,9 +475,10 @@ Suppose you want to highlight the model that includes both `is_married` and
 to check that all of them are true. 
 
 ```{r}
-multiverse_table['has_both'] <- ifelse(ie_table$is_married & 
-                                         ie_table$payment_income_ratio,
-                                       "Includes both", "")
+multiverse_table['has_both'] <- ifelse(
+  grepl("is_married", multiverse_table$Model) & 
+    grepl("payment_income_ratio", multiverse_table$Model),
+  "Includes both", "")
 
 ggplot(multiverse_table, aes(y = Model)) +
   geom_point(aes(x = Estimate)) +
@@ -469,14 +508,12 @@ ggplot(multiverse_table, aes(y = Model_label)) +
   facet_grid(rows = vars(has_both), scales = "free_y")
 ```
 
-
 > In all 4 models fitted in the multiverse analysis, we do not find 
 statistically significant evidence that an applicant's sex was relevant in the 
 probability of approval for their mortgage application. The multiverse analysis
-further strengthened our conclusion from the simple linear regression analysis
-with no covariates. However, it's worth noting that including the information
-about an applicant's marital status visibly increased the estimated effect
-size. 
+further strengthened our conclusion from the simple model with no covariates.
+However, it's worth noting that including the information about an applicant's
+marital status visibly increased the estimated effect size. 
 
 Indeed, you will see that the larger multiverse analysis in the following 
 activity consists of results that are both statistically significant and not.
